# cci-design

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
archive/: list_numbers.py  split_by_project.py
data/templates/: invoice-template.numbers  invoice-template.xlsx
deploy/: cci-api.service  cloudflared-config.yml.template  cloudflared.service  run-monthly-report.sh  run-weekly-report.sh  setup-vps.sh  sudoers-cci
src/: __init__.py
src/api/: __init__.py  dependencies.py  logging.py  main.py
src/api/models/: __init__.py  responses.py
src/api/routes/: __init__.py  health.py  invoices.py
src/core/: __init__.py  config.py  database.py  graph_client.py  validation.py
src/models/: __init__.py  events.py
src/scripts/: create_invoices.py  create_monthly_report.py  create_weekly_report.py  init_db.py  list_users_calendars.py
src/services/: __init__.py  calendar.py  email.py  invoices.py  reports.py
tests/: conftest.py
tests/fixtures/: __init__.py  generate_events.py  sync_to_calendar.py
